--- a/app/src/main/res/layout/photo_inspectation.xml
+++ b/app/src/main/res/layout/photo_inspectation.xml
@@ -9,5 +9,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:cropToPadding="false"
         app:srcCompat="@drawable/ic_launcher_background" />
 </LinearLayout>
